--- a/acknowledgments.qmd
+++ b/acknowledgments.qmd
@@ -19,7 +19,7 @@ Graphics in the document are produced with multiple R packages [@modelsummary;
 
 ## Author Contribution Statement{.unnumbered}
 
-```{r contrib, results = 'asis', message=FALSE, echo=FALSE}
+```{r contrib, results = 'asis', message=FALSE, echo=FALSE, cache = FALSE}
 library(CRediTas)
 crt <- readr::read_csv("author_contributions.csv", show_col_types = FALSE)
 ```
